--- a/css/index.css
+++ b/css/index.css
@@ -124,13 +124,14 @@ input:is(:hover, :focus), textarea:is(:hover, :focus){
 
 header {
     height: 100%;
-    padding: 0.5rem;
+    padding: 0;
     box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     position: relative;
+    transition: 0.5s ease;
 
     .cover {
         display: flex;
@@ -275,7 +276,7 @@ header {
 
 main {
     position: relative;
-    height: 100%;
+    height: 0;
     overflow: hidden;
 
     & nav {
@@ -1153,12 +1154,12 @@ main {
 
         @media (min-width: 1000px) {
             .avatar {
-                position: fixed;
+                position: absolute;
                 display: grid;
                 grid-template-columns: auto max-content max-content;
                 grid-template-rows: repeat(10, max-content);
                 top: 20%;
-                inset-inline: 0;
+                inset-inline: 1rem;
                 margin-top: 0;
                 z-index: 1;
 
@@ -1299,15 +1300,16 @@ main {
     
                     .mapCon {
                         & div.worldMap {
+                            opacity: 0;
                             display: block;
                             position: fixed;
                             left: 17%;
                             top: 17%;
                             right: 25%;
                             width: auto;
-
                             background-color: var(--frontColor6);
                             transition: 1.5s 0.5s ease;
+                            animation: opacity 0.5s 0.3s ease forwards;
                         }
     
                         .position {
