--- a/css/index.css
+++ b/css/index.css
@@ -1087,10 +1087,13 @@ main {
                 transition: 0.2s linear;
 
                 & div.worldMap {
-                    clip-path: url(#map);
-                    background-color: var(--frontColor6);
                     width: 100%;
-                    aspect-ratio: 1.6666666;
+                    height: auto;
+
+                    & svg {
+                        height: 100%;
+                        fill: var(--frontColor6);
+                    }
                 }
 
                 & div.position {
@@ -1122,9 +1125,11 @@ main {
                 margin-bottom: 14rem;
 
                 .mapCon {
-                    .worldMap {
-                        background-color: var(--frontColor6);
-                        transition: 1.5s 0.5s ease;
+                    & div.worldMap {
+                        & svg {
+                            fill: var(--frontColor6);
+                            transition: 1.5s 0.5s ease;
+                        }
                     }
 
                     .position {
@@ -1142,8 +1147,10 @@ main {
                 .mapCon.active {
                     overflow: visible;
 
-                    .worldMap {
-                        background-color: var(--frontColor3);
+                    & div.worldMap {
+                        & svg {
+                            fill: var(--frontColor3);
+                        }
                     }
 
                     .position {
@@ -1231,7 +1238,7 @@ main {
                         display: none;
                         inset-inline: 17% 25%;
                         top: 17%;
-                        aspect-ratio: 1.6666666;
+                        height: auto;
                         z-index: 1;
 
                         & svg {
@@ -1301,7 +1308,7 @@ main {
                     margin-bottom: 0;
     
                     .mapCon {
-                        & div.worldMap {
+                        .worldMap {
                             opacity: 0;
                             display: block;
                             position: fixed;
@@ -1309,9 +1316,12 @@ main {
                             top: 17%;
                             right: 25%;
                             width: auto;
-                            background-color: var(--frontColor6);
-                            transition: 1.5s 0.5s ease;
                             animation: opacity 0.5s 0.3s ease forwards;
+
+                            & svg {
+                                fill: var(--frontColor6);
+                                transition: 1.5s 0.5s ease;
+                            }
                         }
     
                         .position {
@@ -1331,7 +1341,10 @@ main {
                         overflow: visible;
     
                         .worldMap {
-                            background-color: var(--frontColor3);
+
+                            & svg {
+                                fill: var(--frontColor3);
+                            }
                         }
     
                         .position {
@@ -1343,9 +1356,9 @@ main {
                 }
             }
 
-            .mapContainer {
+            /* .mapContainer {
                 height: 0;
-            }
+            } */
         }
     }
 
